--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-venv
+.DS_Store
+.env
+.flaskenv
+*.pyc
+*.pyo
+env/
+venv/
+.venv/
+env*
+dist/
+build/
+*.egg
+*.egg-info/
+.tox/
+.cache/
+.pytest_cache/
+.idea/
+docs/_build/
+.vscode
+instance/
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+*,cover
