--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Flask==2.2.3
-flask_restful==0.3.9
+flask_marshmallow==0.14.0
+Flask_RESTful==0.3.9
+marshmallow==3.19.0
 numpy==1.19.5
 opencv_python==4.7.0.68
